fix text align

--- a/bum.css
+++ b/bum.css
@@ -1,5 +1,6 @@
 html{
     background-color: antiquewhite;
+    text-align: center;
 }
 
 .rules{
